@@ -19,3 +19,4 @@ Create /dev/md* device file if missing when creating a RAID set.
 Added a button for changing the number of active devices in a RAID 5 or 6 set, thanks to Diego Zuccato.
 ---- Changes since 1.480 ----
 Added an option to the RAID 1 creation form to mark one of the disks as missing initially.
+Run the update-initramfs -u command after changing mdadm.conf, to sync it into any ramdisk for use at boot time.
